@@ -5,6 +5,7 @@ import stroom.config.app.AppConfig;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
@@ -15,10 +16,11 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class TestYamlConfigurer {
     @Test
-    void test() throws URISyntaxException, IOException {
-        final URL url = getClass().getResource("/expected.yaml");
-        final Path exampleFile = Paths.get(url.toURI());
-        final String expected = new String(Files.readAllBytes(exampleFile));
+    void test() throws IOException {
+        String expected;
+        try (final InputStream inputStream = getClass().getResourceAsStream("expected.yaml")) {
+            expected = new String(inputStream.readAllBytes());
+        }
 
         final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
         final YamlConfigurer yamlConfigurer = new YamlConfigurer();
